# drum-assistant

./: .gitignore  Cargo.toml  LICENSE  README.md  battery-assistant.service  install.sh  package.sh  uninstall.sh
.github/workflows/: ci.yml
src/: audio.rs  config.rs  logger.rs  main.rs  monitor.rs  notification.rs  signal.rs
src/battery/: mod.rs  monitor.rs  service.rs  types.rs
src/core/: logger.rs  mod.rs  monitor.rs
